--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <img src="images/top/img_main02.jpg" alt="ご褒美、手土産、おもてなし、贈答品などに">
             </div>
-
+            <!-- 焼きくりきんとんここから -->
             <section class="content_read yaki">
                 <div class="content-wrap">
                     <div class="yakiImg">
@@ -111,10 +111,10 @@
 
 
                     <div class="shop_area">
-                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとん">
+                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットtit">
                         <div class="content_entry_flex">
-                            <p>１個ずつ丁寧に個包装。ご自宅用はもちろん、お手土産や贈り物にもおすすめ。</p>
-                            <img src="images/top/shop_yaki03.jpg" alt="焼きくりこんとん10個入り">
+                            <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                            <img src="images/top/shop_yaki03.jpg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットimg">
                         </div>
                         <div class="btn_link-entry">
                             <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
@@ -127,6 +127,7 @@
 
                 </div>
             </section>
+            <!-- 焼きくりきんとんここまで -->
             <!-- ここから栗ごころ -->
             <section class="content_read kurigokoro">
                 <div class="content-wrap">
@@ -143,11 +144,25 @@
                     <p>和栗の旨みと甘さを生かした自家製栗きんとんを、国産小豆と岐阜県産糸寒天で炊き上げた羊羹と竹皮で包みます。その後、蒸すことで羊羹が一度とろとろになるため、羊羹の甘さが栗きんとんに馴染み、おいしさを引き出します。時間をかけてじっくりと蒸し上げることで、余分な甘みが落ち、栗と小豆の香りが際立ち上品な味わいに。 従来の栗きんとんよりしっとりとした口当たりで、羊羹のなめらかさとよく合います。
                     </p>
 
+
                     <div class="shop_area">
-                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとん">
+                        <img src="images/top/tit_gokoro01.svg" alt="栗きんとん羊羹栗ごころタイトル">
                         <div class="content_entry_flex">
-                            <p>１個ずつ丁寧に個包装。ご自宅用はもちろん、お手土産や贈り物にもおすすめ。</p>
-                            <img src="images/top/shop_yaki03.jpg" alt="焼きくりこんとん10個入り">
+                            <p>化粧箱の掛け紙には、地元岐阜県多治見市の花でもある「桔梗」を上品にデザイン。</p>
+                            <img src="images/top/shop_gokoroi01.jpg" alt="栗きんとん羊羹くりごころ">
+                        </div>
+                        <div class="btn_link-entry">
+                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                target="_blank" class="btn_link-brown">
+                                <span>購入はこちらから</span></a>
+                        </div>
+                    </div>
+
+                    <div class="shop_area">
+                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットtit">
+                        <div class="content_entry_flex">
+                            <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                            <img src="images/top/shop_yaki03.jpg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットimg">
                         </div>
                         <div class="btn_link-entry">
                             <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
@@ -158,8 +173,44 @@
                 </div>
             </section>
 
+            <!-- 栗ごころここまで -->
 
 
+
+            <!-- 二種セットここから -->
+
+
+            <section class="content_read set">
+                <div class="content-inner">
+                    <img src="images/top/img_set01.png" alt="焼きくりきんとんと栗きんとん羊羹栗ごころ">
+                </div>
+                <div class="content-wrap">
+                    <div class="set_tit">
+                        焼きくりきんとん
+                        <br><span> 栗きんとん羊羹『栗ごころ』</span>
+                    </div>
+
+                    <p> 和栗菓子二種
+                        <br> 特撰セット
+                        </ｐ>
+
+                        <div class="shop_area">
+                            <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットtit">
+                            <div class="content_entry_flex">
+                                <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                                <img src="images/top/shop_yaki03.jpg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットimg">
+                            </div>
+                            <div class="btn_link-entry">
+                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                    target="_blank" class="btn_link-brown">
+                                    <span>購入はこちらから</span></a>
+                            </div>
+                        </div>
+
+
+                </div>
+            </section>
+            <!-- 二種セットここまで -->
 
             <section class="content_sup">
                 <div class="content-inner">
